Added error handling

--- a/src/App.css
+++ b/src/App.css
@@ -454,6 +454,12 @@ form {
   cursor: pointer;
 }
 
+.errordisplay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media only screen and (max-width: 800px) {
   body {
     margin-top: 60px;
