--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,24 @@
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.loader {
+  border: 16px solid #d0dfe4;
+  border-top: 16px solid #db3434;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 a {
   width: 100%;
   text-decoration: none;
